# genetic-algorithm

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
genalg/: main.c
genalg/include/: genalg.h
test/: main.c
usage_example/: main.c
